--- a/01. PARTIE LEGISLATIVE/Article L1803-1 - 23084936.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-1 - 23084936.md
@@ -10,9 +10,9 @@ chaque collectivité territoriale d'outre-mer.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Liens**:
 
-	  - Loi n°2009-594 du 27 mai 2009 - art. 49 (VT)
+	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
 
 	**Codifié par**:
 
