--- a/01. PARTIE LEGISLATIVE/Article L1803-2 - 23084934.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-2 - 23084934.md
@@ -8,9 +8,9 @@ des aides liées aux déplacements justifiés par la formation professionnelle e
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Liens**:
 
-	  - Loi n°2009-594 du 27 mai 2009 - art. 50 (VT), alinéas 1, paragraphe I, et 3, paragraphe II
+	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
 
 	**Cité par**:
 
@@ -25,6 +25,7 @@ des aides liées aux déplacements justifiés par la formation professionnelle e
 	  - Code des transports - art. L1803-5 (V)
 	  - Code des transports - art. L1803-6 (V)
 	  - Code des transports - art. L1803-7 (M)
+	  - Code des transports - art. L1803-8 (Ab)
 	  - Code des transports - art. L1803-9 (V)
 
 	**Codifié par**:
