--- a/01. PARTIE LEGISLATIVE/Article L1803-3 - 23084932.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-3 - 23084932.md
@@ -8,9 +8,9 @@ métropole.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Liens**:
 
-	  - Loi n°2009-594 du 27 mai 2009 - art. 50 (VT), alinéa 4, paragraphe II
+	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
 
 	**Cité par**:
 
@@ -18,7 +18,7 @@ métropole.
 
 	**Cite**:
 
-	  - Code des transports - art. L1803-2 (VD)
+	  - Code des transports - art. L1803-2
 
 	**Codifié par**:
 
