--- a/01. PARTIE LEGISLATIVE/Article L1803-4 - 31323746.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-4 - 31323746.md
@@ -12,10 +12,6 @@ alinéa.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°2009-594 du 27 mai 2009 - art. 50 (VT), alinéas 5 et 6, paragraphe III
-
 	**Cité par**:
 
 	  - Arrêté du 18 novembre 2010 - art. 1 (V)
@@ -25,10 +21,15 @@ alinéa.
 	  - Code des transports - art. D1803-13 (V)
 	  - Code des transports - art. D1803-14 (V)
 	  - Code des transports - art. D1803-3 (V)
+	  - Code des transports - art. L1803-8 (Ab)
+
+	**Liens**:
+
+	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. L1803-2 (VD)
+	  - Code des transports - art. L1803-2
 
 	**Codifié par**:
 
