--- a/01. PARTIE LEGISLATIVE/Article L1803-5 - 23084928.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-5 - 23084928.md
@@ -14,9 +14,9 @@ habituelle et que la discontinuité territoriale ou l'éloignement constitue un 
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Liens**:
 
-	  - Loi n°2009-594 du 27 mai 2009 - art. 50 (VT), alinéas 8 à 10, paragraphe IV
+	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
 
 	**Cité par**:
 
@@ -26,7 +26,7 @@ habituelle et que la discontinuité territoriale ou l'éloignement constitue un 
 
 	**Cite**:
 
-	  - Code des transports - art. L1803-2 (VD)
+	  - Code des transports - art. L1803-2
 
 	**Codifié par**:
 
