--- a/01. PARTIE LEGISLATIVE/Article L1803-6 - 23084926.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-6 - 23084926.md
@@ -15,10 +15,6 @@ du passeport pour la mobilité de la formation professionnelle.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°2009-594 du 27 mai 2009 - art. 50 (VT), alinéas 11 à 14, paragraphe V
-
 	**Cité par**:
 
 	  - Arrêté du 13 décembre 2010 - art. 1 (V)
@@ -26,9 +22,13 @@ du passeport pour la mobilité de la formation professionnelle.
 	  - Code des transports - art. D1803-14 (V)
 	  - Code des transports - art. D1803-6 (V)
 
+	**Liens**:
+
+	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
+
 	**Cite**:
 
-	  - Code des transports - art. L1803-2 (VD)
+	  - Code des transports - art. L1803-2
 
 	**Codifié par**:
 
