--- a/01. PARTIE LEGISLATIVE/Article L6732-3 - 26176228.md
+++ b/01. PARTIE LEGISLATIVE/Article L6732-3 - 26176228.md
@@ -13,16 +13,17 @@ L'autorité administrative compétente peut accorder des dérogations aux exigen
 circonstances opérationnelles ou de nécessités opérationnelles imprévues et urgentes d'une durée limitée, pour autant que ces
 dérogations ne réduisent pas le niveau de sécurité.
 
+Lorsqu'un niveau de protection équivalent à celui atteint par l'application des règles applicables en métropole en vertu des
+règlements pris pour l'application du règlement (UE) n° 216/2008, du 20 février 2008, précité peut être obtenu par d'autres
+moyens, l'autorité administrative compétente peut prendre un arrêté portant dérogation à ces règles et fixant les conditions
+associées.
+
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 20
+	  - Loi n°2015-1268 du 14 octobre 2015 - art. 62
 
 	**Cite**:
 
-	  - Code des transports - art. L6221-1 (V)
-
-	**Anciens textes**:
-
-	  - Code des transports - art. L6731-3 (T)
+	  - Code des transports - art. L6221-1
