--- a/01. PARTIE LEGISLATIVE/Article L6753-1 - 23077458.md
+++ b/01. PARTIE LEGISLATIVE/Article L6753-1 - 23077458.md
@@ -1,6 +1,6 @@
 # Article L6753-1
 
-Pour l'application à Saint-Pierre-et-Miquelon des dispositions de l'article L. 6341-2 aux aérodromes ouverts au trafic
+I. - Pour l'application à Saint-Pierre-et-Miquelon des dispositions de l'article L. 6341-2 aux aérodromes ouverts au trafic
 commercial international, les mots : " de l'application du règlement (CE) n° 300/2008 du Parlement européen et du Conseil du
 11 mars 2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de l'aviation civile et des règlements
 pris pour son application par la Commission européenne " sont remplacés par les mots : " de l'application des règles en
@@ -12,7 +12,14 @@ mesures de sûreté prescrites en application des règles en vigueur en métropo
 Parlement européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de
 l'aviation civile et des règlements pris pour son application par la Commission européenne.
 
+II. - Pour l'application du deuxième alinéa de l'article L. 6341-4, après la première occurrence des mots : "en application",
+sont insérés les mots : "des règles en vigueur en métropole en vertu".
+
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2015-1268 du 14 octobre 2015 - art. 59
 
 	**Cité par**:
 
@@ -25,7 +32,3 @@ l'aviation civile et des règlements pris pour son application par la Commission
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
-
-	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 7
