--- a/01. PARTIE LEGISLATIVE/Article L6762-2 - 23077424.md
+++ b/01. PARTIE LEGISLATIVE/Article L6762-2 - 23077424.md
@@ -1,17 +1,22 @@
 # Article L6762-2
 
-Pour l'application en Nouvelle-Calédonie du premier alinéa de l'article L. 6221-1, les mots : " par le règlement (CE) n°
-216/2008 du 20 février 2008 du Parlement européen et du Conseil concernant des règles communes dans le domaine de l'aviation
-civile et instituant une agence européenne de la sécurité aérienne, ou le règlement (CE) n° 550/2004 du Parlement européen et
-du Conseil du 10 mars 2004 relatif à la fourniture de services de navigation aérienne dans le Ciel unique européen " sont
-remplacés par les mots : " par les règles applicables en métropole en vertu du règlement (CE) n° 216/2008 du 20 février 2008
-du Parlement européen et du Conseil concernant des règles communes dans le domaine de l'aviation civile et instituant une
-agence européenne de la sécurité aérienne ou en vertu des règlements pris pour son application par la Commission européenne
-".
+Pour l'application en Nouvelle-Calédonie du premier alinéa de l'article L. 6221-1 et dans le cadre de la police et de la
+sécurité de la circulation aérienne extérieure, les mots : " par le règlement (CE) n° 216/2008 du 20 février 2008 du
+Parlement européen et du Conseil concernant des règles communes dans le domaine de l'aviation civile et instituant une agence
+européenne de la sécurité aérienne, ou le règlement (CE) n° 550/2004 du Parlement européen et du Conseil du 10 mars 2004
+relatif à la fourniture de services de navigation aérienne dans le Ciel unique européen " sont remplacés par les mots : " par
+les règles applicables en métropole en vertu du règlement (CE) n° 216/2008 du 20 février 2008 du Parlement européen et du
+Conseil concernant des règles communes dans le domaine de l'aviation civile et instituant une agence européenne de la
+sécurité aérienne ou en vertu des règlements pris pour son application par la Commission européenne ".
 
 L'autorité administrative compétente peut accorder des dérogations aux exigences de fond précisées dans ces règles, en cas de
 circonstances opérationnelles ou de nécessités opérationnelles imprévues et urgentes d'une durée limitée, pour autant que ces
 dérogations ne réduisent pas le niveau de sécurité.
+
+Lorsqu'un niveau de protection équivalent à celui atteint par l'application des règles applicables en métropole en vertu des
+règlements pris pour l'application du règlement (UE) n° 216/2008, du 20 février 2008, précité peut être obtenu par d'autres
+moyens, l'autorité administrative compétente peut prendre un arrêté portant dérogation à ces règles et fixant les conditions
+associées.
 
 **Liens relatifs à cet article**
 
@@ -20,16 +25,14 @@ dérogations ne réduisent pas le niveau de sécurité.
 	  - Arrêté du 16 octobre 2012 - art. 1 (V)
 	  - Arrêté du 18 novembre 2015 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2015-1268 du 14 octobre 2015 - art. 62
+
 	**Cite**:
 
 	  - Code des transports - art. L6221-1
-	  - règlement (CE) n°216/2008 du 20 février 2008
-	  - règlement (CE) n°550/2004
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
-
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
