--- a/01. PARTIE LEGISLATIVE/Article L6772-2 - 23077357.md
+++ b/01. PARTIE LEGISLATIVE/Article L6772-2 - 23077357.md
@@ -11,18 +11,23 @@ agence européenne de la sécurité aérienne ou en vertu des règlements pris p
 
 L'autorité administrative compétente peut accorder des dérogations aux exigences de fond précisées dans ces règles, en cas de
 circonstances opérationnelles ou de nécessités opérationnelles imprévues et urgentes d'une durée limitée, pour autant que ces
-dérogations ne réduisent pas le niveau de sécurité.
+dérogations ne réduisent pas le niveau de sécurité.  
+
+Lorsqu'un niveau de protection équivalent à celui atteint par l'application des règles applicables en métropole en vertu des
+règlements pris pour l'application du règlement (UE) n° 216/2008, du 20 février 2008, précité peut être obtenu par d'autres
+moyens, l'autorité administrative compétente peut prendre un arrêté portant dérogation à ces règles et fixant les conditions
+associées.
 
 **Liens relatifs à cet article**
-
-	**Modifié par**:
-
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
 
 	**Cité par**:
 
 	  - Arrêté du 16 octobre 2012 - art. 1 (V)
 	  - Arrêté du 18 novembre 2015 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2015-1268 du 14 octobre 2015 - art. 62
 
 	**Cite**:
 
