--- a/01. PARTIE LEGISLATIVE/Article L1803-7 - 23084924.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-7 - 23084924.md
@@ -5,13 +5,13 @@ même année sont fixées par voie réglementaire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Liens**:
 
-	  - Loi n°2009-594 du 27 mai 2009 - art. 50 (VT), alinéa 15, paragraphe VI
+	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. L1803-2 (VD)
+	  - Code des transports - art. L1803-2
 
 	**Codifié par**:
 
