--- a/01. PARTIE LEGISLATIVE/Article L1803-9 - 23084920.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-9 - 23084920.md
@@ -6,13 +6,13 @@ chacune des collectivités mentionnées à l'article L. 1803-2 avec la métropol
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Liens**:
 
-	  - Loi n°2009-594 du 27 mai 2009 - art. 50 (VT), alinéas 2, paragraphe I, et 7, paragraphe III
+	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. L1803-2 (VD)
+	  - Code des transports - art. L1803-2
 
 	**Codifié par**:
 
