--- a/01. PARTIE LEGISLATIVE/Article L6732-4 - 26176230.md
+++ b/01. PARTIE LEGISLATIVE/Article L6732-4 - 26176230.md
@@ -1,17 +1,11 @@
 # Article L6732-4
 
-Le titre VI du livre III ne s'applique pas à Saint-Barthélemy.
+Les règles en vigueur en métropole en vertu du règlement (CE) n° 785/2004 du Parlement européen et du Conseil, du 21 avril
+2004, relatif aux exigences en matière d'assurance applicables aux transporteurs aériens et aux exploitants d'aéronefs sont
+applicables à Saint-Barthélemy.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 2
-
-	**Liens**:
-
-	  - TRANSFERE: Loi n°2013-619 du 16 juillet 2013 - art. 20
-
-	**Nouveaux textes**:
-
-	  - Code des transports - art. L6733-4 (V)
+	  - Loi n°2015-1268 du 14 octobre 2015 - art. 59
