--- a/01. PARTIE LEGISLATIVE/Article L6733-2 - 27718236.md
+++ b/01. PARTIE LEGISLATIVE/Article L6733-2 - 27718236.md
@@ -1,22 +1,21 @@
 # Article L6733-2
 
-Pour l'application à Saint-Barthélemy des dispositions de l'article L. 6341-2, les mots : " de l'application du règlement
-(CE) n° 300/2008 du Parlement européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes dans le
-domaine de la sûreté de l'aviation civile et des règlements pris pour son application par la Commission européenne ” sont
-remplacés par les mots : " de l'application des règles en vigueur en métropole en vertu du règlement (CE) n° 300/2008 relatif
-à l'instauration de règles communes dans le domaine de la sûreté de l'aviation civile et des règlements pris pour son
-application par la Commission européenne ”.
+I. - Pour l'application à Saint-Barthélemy des dispositions de l'article L. 6341-2, les mots : " de l'application du
+règlement (CE) n° 300/2008 du Parlement européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes
+dans le domaine de la sûreté de l'aviation civile et des règlements pris pour son application par la Commission européenne ”
+sont remplacés par les mots : "de l'application des règles en vigueur en métropole en vertu du règlement (CE) n° 300/2008
+relatif à l'instauration de règles communes dans le domaine de la sûreté de l'aviation civile et des règlements pris pour son
+application par la Commission européenne”.
+
+II. - Pour l'application du deuxième alinéa de l'article L. 6341-4, après la première occurrence des mots : "en application",
+sont insérés les mots : "des règles en vigueur en métropole en vertu".
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 20
+	  - Loi n°2015-1268 du 14 octobre 2015 - art. 59
 
 	**Cite**:
 
-	  - Code des transports - art. L6341-2 (V)
-
-	**Anciens textes**:
-
-	  - Code des transports - art. L6732-2 (T)
+	  - Code des transports - art. L6341-2
