--- a/01. PARTIE LEGISLATIVE/Article L6783-6 - 23077273.md
+++ b/01. PARTIE LEGISLATIVE/Article L6783-6 - 23077273.md
@@ -1,26 +1,25 @@
 # Article L6783-6
 
-Pour l'application à Wallis-et-Futuna des dispositions de l'article L. 6341-2 aux aérodromes ouverts au trafic commercial
-international, les mots : " de l'application du règlement (CE) n° 300/2008 du Parlement européen et du Conseil du 11 mars
-2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de l'aviation civile et des règlements pris
-pour son application par la Commission européenne " sont remplacés par les mots : " de l'application des règles en vigueur en
-métropole en vertu du règlement (CE) n° 300/2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de
-l'aviation civile et des règlements pris pour son application par la Commission européenne ". 
+I. - Pour l'application à Wallis-et-Futuna des dispositions de l'article L. 6341-2 aux aérodromes ouverts au trafic
+commercial international, les mots : " de l'application du règlement (CE) n° 300/2008 du Parlement européen et du Conseil du
+11 mars 2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de l'aviation civile et des règlements
+pris pour son application par la Commission européenne " sont remplacés par les mots : " de l'application des règles en
+vigueur en métropole en vertu du règlement (CE) n° 300/2008 relatif à l'instauration de règles communes dans le domaine de la
+sûreté de l'aviation civile et des règlements pris pour son application par la Commission européenne ". 
 
 Sur les aérodromes autres que ceux mentionnés à l'alinéa précédent, l'autorité administrative compétente peut prendre des
 mesures de sûreté prescrites en application des règles en vigueur en métropole en vertu du règlement (CE) n° 300/2008 du
 Parlement européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de
 l'aviation civile et des règlements pris pour son application par la Commission européenne.
 
+II. - Pour l'application du deuxième alinéa de l'article L. 6341-4, après la première occurrence des mots : "en application",
+sont insérés les mots : "des règles en vigueur en métropole en vertu".
+
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Modifié par**:
 
-	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 11
+	  - Loi n°2015-1268 du 14 octobre 2015 - art. 59
 
 	**Cité par**:
 
@@ -29,3 +28,7 @@ l'aviation civile et des règlements pris pour son application par la Commission
 	**Cite**:
 
 	  - Code des transports - art. L6341-2
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
