--- a/01. PARTIE LEGISLATIVE/Article L6792-2 - 23077216.md
+++ b/01. PARTIE LEGISLATIVE/Article L6792-2 - 23077216.md
@@ -13,18 +13,23 @@ L'autorité administrative compétente peut accorder des dérogations aux exigen
 circonstances opérationnelles ou de nécessités opérationnelles imprévues et urgentes d'une durée limitée, pour autant que ces
 dérogations ne réduisent pas le niveau de sécurité.
 
+Lorsqu'un niveau de protection équivalent à celui atteint par l'application des règles applicables en métropole en vertu des
+règlements pris pour l'application du règlement (UE) n° 216/2008, du 20 février 2008, précité peut être obtenu par d'autres
+moyens, l'autorité administrative compétente peut prendre un arrêté portant dérogation à ces règles et fixant les conditions
+associées.
+
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
+	  - Loi n°2015-1268 du 14 octobre 2015 - art. 62
 
 	**Cite**:
 
 	  - Code des transports - art. L6221-1
 	  - règlement (CE) n°216/2008 du 20 février 2008
 	  - règlement (CE) n°550/2004
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
